# scte35part2

./: Makefile  README.md  pyproject.toml
scte35part2/: __init__.py  spsparser.py
