
[project]
name = "scte35part2"
version = "1.0.1"
authors = [
  { name="Adrian of Doom", email="spam@bigcorp.ltd" },
]
description = "not yet."
readme = "README.md"
requires-python = ">=3.9"
dependencies=[
    ]


classifiers = [
        "Programming Language :: Python :: Implementation :: PyPy",
        "Programming Language :: Python :: Implementation :: CPython",
]
license-files = ["LICEN[CS]E*"]


